fix about spacing

--- a/app/states/root/_root_styles.scss
+++ b/app/states/root/_root_styles.scss
@@ -1,5 +1,6 @@
 .html-inline-fix p
 {
+	margin-bottom: 2rem;
 	display: block;
 
 	*:not(p):not(hr)
